2.2.2	
	- added documentation files
	- moved build directory for lib files
	- fixed encoding of some source files
	- updated numpy version

2.1.1
	- fixed Python interface for function addFace

2.1.0
	- added XPBD FEM constraint for deformable solids
	- updated to Eigen 3.4.0

2.0.1
	- extended and modified Python interface
	- more Python examples
	- bugfixes
	
2.0.0
	- added Python binding
	- cleaned up demos
	- added XPBD distance constraint
	- added XPBD isometric bending constraint
	- added XPBD volume constraint
	- added glfw 
	- removed freeglut and glew
	- added flat shading

1.8.0
	- added OBJ export
	- added substepping
	- updated GenericParameters
	- bufixes
	- fixed several compiler warnings
	- removed MiniBall dependency
	- update to Eigen 3.3.7
	
1.7.0
	- added DamperJoint
	- improved implementation of SliderJoint
	- improved implementation of TargetPositionMotorSliderJoint
	- improved implementation of TargetVelocityMotorSliderJoint
	- improved implementation of HingeJoint
	- improved implementation of TargetAngleMotorHingeJoint
	- improved implementation of TargetVelocityMotorHingeJoint
	- use XPBD to implement an implicit spring
	- added distance joint for rigid bodies
	- small optimizations
	- fixed single precision build
	- cleanup code
	- using GenericParameters
	- Crispin Deul added the implementation of his paper Deul, Kugelstadt, Weiler, Bender, "Direct Position-Based Solver for Stiff Rods", Computer Graphics Forum 2018 and a corresponding demo

1.6.0
	- added collision detection for arbitrary meshes based on cubic signed distance fields
	- added DiscreGrid library as external project to generate cubic signed distance fields
	- added possibility to define motor target sequences in scene files
	- added implementation of the paper Kugelstadt, Schoemer, "Position and Orientation Based Cosserat Rods", SCA 2016 and a corresponding demo
	- update to Eigen 3.3.4
	
1.5.1
	- added Timing class
	- removed Boost dependency
	- update to Eigen 3.2.9