@@ -1,4 +1,5 @@
 2.2.2	
+	- updated Python examples
 	- added documentation files
 	- moved build directory for lib files
 	- fixed encoding of some source files
